blockml/test/valid/06_calc_refs_calc/v14/v14m.model
model: v14m
joins:
- from_view: v14_one
  as: a

