blockml/test/errors/11_report/e88/e88m.model
model: e88m
joins:
- from_view: e88_one
  as: a
